--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-  
 @import url('https://fonts.googleapis.com/css?family=Alegreya|Oswald');
 
 body {
@@ -16,7 +15,7 @@ h1,h2,h3,h4,h5,h6 {
   margin-right: 10px;
 }
 
-.container .jumbotron, .panel-default .panel-heading {
+.panel-default .panel-heading {
   background: #15263d;
   color: #fff;
   border-radius: 0;
@@ -44,4 +43,10 @@ h1,h2,h3,h4,h5,h6 {
   line-height: 12px;
   border-radius: 12px;
   background-color: #15263d;
+}
+
+.container .jumbotron {
+  background-image: url(https://i2.wp.com/metro.co.uk/wp-content/uploads/2018/05/a058ad9611914c08b059c43b32dcf514.jpg?quality=90&strip=all&zoom=1&resize=644%2C361&ssl=1);
+  background-size: 100% 100%;
+  color: #060147;
 }
