--- a/style.css
+++ b/style.css
@@ -9,11 +9,11 @@ body {
  
 }
 
-h1 {
+h1, h2 {
   font-family: 'Julius Sans One', sans-serif;
 }
 
-h2,h3,h4,h5,h6 {
+h3,h4,h5,h6 {
   font-family: 'Raleway', sans-serif;
 }
 
@@ -87,4 +87,17 @@ h2,h3,h4,h5,h6 {
 
 ul {
   list-style: unset !important;
+}
+
+.ingredients 
+{
+  padding-top: 20px;
+  font-size: larger;
+  font-weight: 400 ;
+}
+
+.directions
+{
+  font-size: larger;
+  font-weight: 400 ;
 }
